# plotlines

./: README.md  TODO.md  pyproject.toml
plotlines/: basis.py  board.py  coordinates.py  dunnart.py  grid.py  main.py  motif.py  plot.py  plotter.py  schema.py  sketch.py  tree.py
plotlines/assets/: basics.css  head.toml  layout.css  object.css  words.txt
plotlines/test/: test_basis.py  test_board.py  test_coordinates.py  test_grid.py  test_motif.py  test_plotter.py  test_svg.py  test_three_sixteenths.py  test_tree.py
plotlines/test/data/: fruition-revisit.toml  minimal_uml_n04e05.xml
sagids/: basis.py  board.py  coordinates.py  grid.py  mech.py  plotlines.py  sketch.py
sagids/test/: test_basis.py  test_board.py  test_coordinates.py  test_grid.py
