[project]
name = "plotlines"
dynamic = ["version"]
description = "Create and display Story structure."
readme = "README.md"
authors = [
    {name = "D E Haynes"}
]
maintainers = [
    {name = "Tundish", email = "tundish@gigeconomy.org.uk"}
]
license = "GPL-3.0-or-later"
classifiers = [
    "Topic :: Multimedia",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.11"
dependencies = [
]

[project.optional-dependencies]

[project.urls]

[project.scripts]
plotlines = "plotlines.main:run"

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "plotlines",
    "plotlines.test",
]

[tool.setuptools.package-data]
plotlines = [
    "assets/*.txt",
]

[tool.setuptools.dynamic]
version = {attr = "plotlines.__version__"}
